explicitly defined col for image. bug on firefox

--- a/src/pages/fixture-detail/fixture-detail.scss
+++ b/src/pages/fixture-detail/fixture-detail.scss
@@ -9,6 +9,11 @@ page-fixture-detail {
     width: 100%;
   }
 
+  .image.col {
+    height: 100%;
+    width: 25%;
+  }
+
   .row {
     text-align: center;
   }
